<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                tools:context=".ui.bills.BillsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="appBar"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/appbar_always_elevated"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/insurance_title"
                android:fontFamily="@font/montserrat_medium"
                style="@style/Title"/>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/cards_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/oval_white_medium_radius_background"
            android:elevation="2dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/insurance_type"
                android:fontFamily="@font/montserrat_medium"
                style="@style/M_Black_Light"/>
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/amount_hint"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/insurance_amount_value"
                    style="@style/M_Accent"/>

                <TextView
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/currency"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/insurance_description"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/insurance_action"
        style="@style/GreenButton"/>
</RelativeLayout>