<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="20dp"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:orientation="vertical"
              android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/hand"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_hand"/>

        <TextView
            android:id="@+id/level_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/hand"
            android:text="@string/level_up"
            android:fontFamily="@font/montserrat_medium"
            style="@style/XL_Accent"/>

        <TextView
            android:id="@+id/congratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level_up"
            android:layout_toRightOf="@id/hand"
            android:text="@string/congratulations"
            android:fontFamily="@font/montserrat_medium"
            style="@style/M_Black_Light"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/level_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_bold"
            style="@style/L_Accent"
            tools:text="9"/>

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/level_value"
            android:textColor="@color/gray"
            android:layout_alignBaseline="@id/level_value"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/level"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@id/level_value"
            android:background="@drawable/ic_progress_modal"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:fontFamily="@font/montserrat_bold"
        style="@style/M_Orange"
        tools:text="You earned -1% for credit!"/>

    <Button
        android:id="@+id/btn_yay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/level_up_action"
        style="@style/GreenButton"/>
</LinearLayout>