<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".ui.invite.InviteFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:stateListAnimator="@animator/appbar_always_elevated"
        android:transitionName="appBar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/invite_title"
            android:fontFamily="@font/montserrat_medium"
            style="@style/Title"/>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/cards_layout"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_below="@id/app_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cards"
        android:layout_marginTop="60dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:background="@drawable/oval_white_big_radius_background"
        android:elevation="2dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:background="@null"
            android:inputType="phone"
            android:textColorHint="@color/gray"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/invite_hint"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_invite"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/invite_action"
        style="@style/GreenButton"/>
</RelativeLayout>